Tentativa commitar alterações do banco

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/testepicpay?createDatabaseIfNo
 spring.datasource.username=root
 spring.datasource.password=Password123#@!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jackson.default-property-inclusion=non_null
