--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password=Password123#@!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jackson.default-property-inclusion=non_null
+
+#spring.data.rest.base-path=/picPayTest
