--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,14 @@
+server.port=3001
+
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/testepicpay?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://127.0.0.1:3307/testepicpay?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Password123#@!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jackson.default-property-inclusion=non_null
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 #spring.data.rest.base-path=/picPayTest
