--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,5 +1,7 @@
+server.port=3001
+
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/testepicpayAmbTeste?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://127.0.0.1:3307/testepicpayAmbTeste?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Password123#@!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
